<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <Spinner
        android:id="@+id/languageSpinner"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="77dp" />

    <TextView
        android:id="@+id/languageTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/languageSpinner"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="31dp"
        android:text="@string/settings_languageTextView_Text"
        android:textAlignment="center"
        android:textAppearance="@android:style/TextAppearance.Holo.Medium" />

    <TextView
        android:id="@+id/postDataIntervalTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/languageSpinner"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="33dp"
        android:text="@string/settings_postDataInvervalTextView_text"
        android:textAlignment="center"
        android:textAppearance="@android:style/TextAppearance.Holo.Medium" />

    <Spinner
        android:id="@+id/postDataIntervalSpinner"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="11dp"
        android:layout_below="@+id/postDataIntervalTextView"
        android:layout_alignStart="@+id/languageSpinner" />

    <TextView
        android:id="@+id/msTextView"
        android:layout_width="35dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/postDataIntervalSpinner"
        android:layout_marginStart="17dp"
        android:layout_toEndOf="@+id/postDataIntervalSpinner"
        android:text="@string/settings_msTextView_text"
        android:textAppearance="@android:style/TextAppearance.Holo.Small" />

    <Button
        android:id="@+id/applyButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/settings_applyButton_text" />
</RelativeLayout>