<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/modeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="112dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="13dp"
        android:layout_marginTop="110dp"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/actions_modeTextView_text"
        android:textAppearance="@android:style/TextAppearance.Material.Widget.TextView"
        android:textSize="18sp"
        app:layout_constraintHorizontal_bias="0.247"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1" />

    <TextView
        android:id="@+id/tempTextView"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:layout_marginEnd="4dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="185dp"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/actions_tempTextView_text"
        android:textAlignment="center"
        android:textAppearance="@android:style/TextAppearance.Material.Widget.TextView"
        android:textSize="18sp"
        app:layout_constraintHorizontal_bias="0.179"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/rpmTextView"
        android:layout_width="95dp"
        android:layout_height="46dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="239dp"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/actions_rpmTextView_text"
        android:textAlignment="center"
        android:textAppearance="@android:style/TextAppearance.Material.Widget.TextView"
        android:textSize="18sp"
        app:layout_constraintHorizontal_bias="0.032"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/tempEditText"
        android:layout_width="139dp"
        android:layout_height="32dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="185dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintHorizontal_bias="0.863"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />

    <ToggleButton
        android:id="@+id/modeToggleButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="99dp"
        android:text="ToggleButton"
        android:textOff="MANUAL"
        android:textOn="AUTO"
        app:layout_constraintHorizontal_bias="0.75"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1" />

    <EditText
        android:id="@+id/rpmEditText"
        android:layout_width="140dp"
        android:layout_height="46dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="239dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintHorizontal_bias="0.867"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />

    <Button
        android:id="@+id/applyActionsButton"
        style="@android:style/Widget.Holo.Button"
        android:layout_width="100dp"
        android:layout_height="49dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="366dp"
        android:text="@string/actions_applyActionsButton_text"
        android:textColorLink="@color/colorPrimary"
        app:layout_constraintHorizontal_bias="0.554"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintTop_creator="1" />
</android.support.constraint.ConstraintLayout>